# Fam-Kart

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260712_0001_create_user_household_tables.py  20260714_0002_add_user_password_hash.py  20260716_0003_create_auth_sessions.py  20260718_0004_create_household_invitations.py  20260721_0005_create_shopping_sessions.py  (+1 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_alembic_config.py  test_auth_schemas.py  test_auth_service.py  test_auth_session_migration.py  test_auth_session_repository.py  test_create_household.py  test_create_household_invitation.py  test_current_user.py  test_db_config.py  test_db_session.py  test_delete_account.py  test_grocery_item_migration.py  test_grocery_item_model.py  test_grocery_item_repository.py  test_grocery_item_schemas.py  test_health.py  test_household_authorization.py  test_household_details.py  test_household_invitation_migration.py  test_household_invitation_repository.py  test_household_members.py  test_initial_migration.py  test_invitation_security.py  test_join_household.py  test_leave_household.py  test_list_households.py  test_login.py  test_logout.py  test_logout_service.py  test_manage_household_invitations.py  test_models.py  test_refresh.py  test_refresh_service.py  test_registration.py  test_remove_household_member.py  test_security.py  test_seed.py  test_shopping_session_api.py  test_shopping_session_migration.py  (+7 more)
(+53 files in other folders)
