[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "familykart-backend"
version = "0.1.0"
description = "FastAPI backend for FamilyKart AI."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.116.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.0",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
cache-dir = "../cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
cache_dir = "../cache/mypy"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:asyncio -p no:anyio"
cache_dir = "../cache/pytest"
